--- a/blog/2024_1221-origin.md
+++ b/blog/2024_1221-origin.md
@@ -9,7 +9,9 @@
 最为珍贵的, 不仅是技术和方法, 更是理念和经历.
 三年前, 师母去世. 直到晚年, 她还私下念叨, 师傅的很多东西没有被很好地传承;
 说后来物色的人都坐不住; 又说只有我在早年把师傅的东西学上了身, 后来却没从医.
-每每想起此情此景, 都很让我脸红, 也让我感觉, 应该写点什么东西出来.
+每每想起此情此景, 都很让我脸红, 也让我感觉, 应该做点什么.
+其实之前也尝试录过视频, 讲解道德经, 但由于缺乏经验和表演技巧, 又不想鼓弄玄虚, 因此收看率也不高, 索性下架.
+或许写点什么东西会更合适吧~
 
 另一方面, 这里设立这个博客, 很大程度上也是受到`Steve Pavlina`的个人网站
 [Personal Development for Smart People](https://stevepavlina.com/)的启发和激励.
@@ -40,13 +42,13 @@
 ```
 
 所以, 尽管现代化的高科技创造了无数奇迹, 但即便在技术领域, 我们也应对史前祖先的智慧抱持应有的尊重.
-实际上, 在我看来, 科技高速发展, 物欲沆瀣横流, 人心失衡难稳的社会里, 更应该重视古人的智慧和探索之旅.
+实际上, 在我看来, 科技高速发展, 物欲沆瀣横流, 人心失衡难稳的社会里, 更应该珍视古人的智慧和探索之旅.
 
 最后, 尽管这个博客是受`Steve Pavlina`的激励而设, 它却不会被建为
 如同`Personal Development for Smart People`那样大且专业的网站. 因为,
 - 本站只是一个业余的项目;
 - 在这里写文章都是出于个人的爱好和良善的驱动;
-- 与`Steve Pavlina`的网站不同, 本站所有的内容都是免费的, 且无广告等其他形式的回报;
+- 与`Steve Pavlina`的网站不同, 本站所有的内容都是免费的, 且无广告等其他形式的隐形门票;
 
 也因此, 我在这里必须声明, 尽管我可以百分百地向读者保证,
 建立这个网站和撰写其中文章的初衷是希望给您带来希望, 启发和帮助,
@@ -56,6 +58,10 @@
 谢谢收看, 并祝好运!
 
 ---
+
+下面是之前梳理的`道德经`全文, 以王弼本为基础, 也主要参照了`陈鼓应`, `高亨`, `任继愈`等人的注释,
+并在关键处直接参考了郭店楚墓竹简本, 马王堆汉墓帛书本, 北大汉简本等出土原本的字形字义.
+梳理的策略是, 以追溯老子原意和内在逻辑为基础, 直接对各版本中残存的通假字直接做还原处理.
 
 ### 道德经全文
 
