--- a/blog/2025_0210-hypnotic.md
+++ b/blog/2025_0210-hypnotic.md
@@ -83,4 +83,4 @@
 这些方法看似简单，背后却蕴含了深刻的道理，并且也经过了许多检验。
 善用这些方法一定能帮助你摆脱失眠的困扰，拥有一个甜美的梦乡。
 
-最后请注意，如果你的失眠问题持续存在，建议寻求专业医生的帮助，以排查其他潜在问题。
+最后请注意，如果你的失眠问题持续存在，建议寻求专业医生的帮助，以排除其他潜在问题。
