--- a/blog/2024_1221-origin.md
+++ b/blog/2024_1221-origin.md
@@ -50,9 +50,10 @@
 - 在这里写文章都是出于个人的爱好和良善的驱动;
 - 与`Steve Pavlina`的网站不同, 本站所有的内容都是免费的, 且无广告等其他形式的隐形门票;
 
-也因此, 我在这里必须声明, 尽管我可以百分百地向读者保证,
-建立这个网站和撰写其中文章的初衷是希望给您带来希望, 启发和帮助,
-但我却绝不敢也不能保证自己能够做到这一点.
+所以, 我在这里必须声明, 尽管我可以百分百地向读者保证,
+建立这个网站和撰写其中文章的初衷是希望给您带来希望, 启发和帮助;
+这个过程中也严格按照`书写, 进站, 上墙`三个阶段分别进行质量控制;
+但由于各方面限制, 我却绝不敢也不能保证自己能够做到让您满意.
 因此, 我只能谦恭地请求读者, 在感觉不适的时候, 及时关闭本站文章.
 
 谢谢收看, 并祝好运!
