--- a/blog/2025_0303-incense.md
+++ b/blog/2025_0303-incense.md
@@ -47,7 +47,7 @@
 - **持续时间短**：不会造成负担，适合在日常生活中随时应用。
 - **过程愉悦**：香气本身就是一种享受，容易形成正向反馈，使你愿意持续尝试。
 
-对于现代人来说，品香不仅是一种缓解焦虑的方法，更是一种回归自然、安定身心的生活智慧。
+对我们来说，品香不仅是一种缓解焦虑的方法，更是一种回归自然、安定身心的生活智慧。
 它不要求我们改变太多，只需要我们愿意停下脚步，用最原始的感官去感受世界的美好。
 这种简单而直接的方式，往往能带来意想不到的治愈效果。
 
