--- a/blog/2025_0303-incense.md
+++ b/blog/2025_0303-incense.md
@@ -1,4 +1,4 @@
-寻香静心：在芬芳中安抚和疗愈自己
+# 寻香静心：在芬芳中安抚和疗愈自己
 - 2025.3.3
 
 前些日子与大家[分享了几种舒缓压力的方法](https://github.com/WayneMurphy/WayneMurphy.github.io/blob/main/blog/2025_0205-healing.md)。
@@ -72,7 +72,7 @@
 
 2.  **备心仪之香：**
 根据香方，选择自己喜爱的香品，可以是应季的新鲜花草，也可以是天然熏香(注意香薰品质; 可以从小剂量开始尝试)。
-如果是熏香，事先准备好香炉、香插等器具。
+如果是熏香，事先准备好香炉、香插等器具。*而对于鲜花而言，除了采摘和购买，能在自己亲手种植是再好不过的。*
 
 3.  **取舒适之姿：**
 选择一个让自己感到舒适的姿势，不必拘泥于传统的打坐姿势。
